feat: integrate weather-driven yield forecasting